TAG: qcreports_db-5-1-8-8
DATE: 04/18/2014
STAFF: lnh
CHANGES: TR11332
Added a new qc repport - mgd/GO_EvidenceProperty.py
A report that inspects J:73065 GO annotations 

TAG: qcreports_db-5-1-8-7
DATE: 04/15/2014
STAFF: lec
CHANGES: TR 11361/ALL_Progress.py

TAG: qcreports_db-5-1-8-6
TAG: qcreports_db-5-1-8-5
DATE: 04/09/2014
STAFF: lec
CHANGES: TR11253/jan2014 and apr2014
mgd/PRB_StrainByDate.sql: add 'mberry'/12/09/2013 to exclusion list

**accidentally wrote "5" instead of "3"...and then had to retag to make sure
that the HISTORY file agreed with the tag

TAG: qcreports_db-5-1-8-2
DATE: 03/19/2014
STAFF: lec
CHANGES: 
a) TR11544/weekly/ALL_MolNotesNoMP.py : add J:204739 to excluded list
b) TR11597/mgd/GXD_SpecTheilerAge
c) TR11597/mgd/GXD_ExpPresNotPres.py
d) TR11597/mgd/GXD_ChildExpNotParent.py
e) TR11597/mgd/GXD_ImageJPG.sql
f) TR11597/mgd/GXD_ImageSpecimen.py
g) TR11597/mgd/GXD_Stats.py
h) TR11597/mgd/GXD_Mouse_Development_Anatomy.py
i) TR11597/weekly/GXD_EMAPA_Terms.py
j) TR11597/weekly/GXD_EMAPS_Terms.py
g) TR11621/weekly/MTB_Triage.py

TAG: qcreports_db-5-1-8-1
DATE: 03/06/2014
STAFF: lec
CHANGES: 
1) merge to trunk : branch point tag for TR11515/allele stuff

TAG: qcreports_db-5-1-7-4
DATE: 02/10/2014
STAFF: sc
CHANGES: TR11589
1) added mgd/GXD_Mouse_Developmental_Anatomy.py
2) qcr.html added GXD_Mouse_Developmental_Anatomy.rpt

TAG: qcreports_db-5-1-7-3
DATE: 1/28/2014
STAFF: sc
CHANGES: TR11507
1) GXD_AssayInIndexNotInCache.py - exclude Nuclease S1 and RNase protection 
2) GXD_FullCodeGene.sql - exclude RNAse prot (74727) and S1 nuc (74726) 
CHANGES: TR11347
1) GXD_FullCodeable.py - removed OMIM column (and queries) from report 1
2) weekly/GXD_FullCodeableIndexed.py - removed OMIM column (and queries)
CHANGES: TR11543 - updated TS 27/28 min/max values in db
1) GXD_SpecNoAge.sql - add exclusion of TS 27 when querying for InSitu 
    and Gel Lanes where age like 'postnatal%'.
2) RECOMB_SpecNoAge.sql - add exclusion of TS 27 when querying for InSitu 